# dune-many-locks

./: .gitignore  bogus.opam  configure  dune-project  dune-workspace
.github/workflows/: main.yaml  windows.yaml
dune-locks/: mac-arm-workspace  ubuntu-x86-workspace  windows-x86-workspace
dune-locks/configs/: mac-arm-workspace  ubuntu-x86-workspace  windows-x86-workspace
dune-locks/mac-arm/: conf-libpcre.pkg  lock.dune
dune-locks/mac-arm64/: eio_main.pkg  lock.dune  mac-arm64  ocaml-compiler.pkg
dune-locks/mac-x86_64/: domain-local-await.pkg  lock.dune  ocaml-compiler.pkg
dune-locks/ubuntu-arm64/: iomux.pkg  lock.dune  ocaml-compiler.pkg
dune-locks/ubuntu-x86/: eio.pkg  eio_linux.pkg  eio_posix.pkg  fmt.pkg  lock.dune  ocaml-compiler.pkg
dune-locks/ubuntu-x86_64/: conf-libpcre.pkg  eio_main.pkg  lock.dune  ocaml-base-compiler.pkg  uring.pkg
dune-locks/win-x86/: conf-libpcre.pkg  conf-mingw-w64-pcre-x86_64.pkg  dune-configurator.pkg  eio_main.pkg  flexdll.pkg  lock.dune  ocaml-compiler.pkg  ocaml-env-mingw64.pkg
dune-locks/windows-x86_64/: conf-mingw-w64-gcc-x86_64.pkg  eio_windows.pkg  lock.dune  mingw-w64-shims.pkg  ocaml.pkg  system-mingw.pkg  thread-table.pkg
lib/: dune
test/: dune
